# osc-mcp

./: .gitignore  COMPLEX_SCENARIO_TEST_REPORT.md  Cargo.toml  HIGHWAY_URBAN_COVERAGE_PLAN.md  QUICK_TEST_REFERENCE.md  README.md  TASK_COMPLETION_SUMMARY.md  TEST_REPORT_CATALOG_VALIDATION.md  TEST_SUMMARY.md  generate_with_roads.sh  test_catalog_validation.sh  verify_xml.rs
docs/: architecture.md  getting-started.md  phase4-visualizations.md  using-with-esmini.md
esmini-tests/: IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  generate_scenarios.py  install.sh  quick_test.py  run_esmini.sh  run_pipeline.sh  test_actor_debug.py  test_end_to_end.sh  test_stop_trigger.py  validate_results.py
openscenario/: Cargo.toml  README.md  log.txt
openscenario-mcp/: Cargo.toml  README.md
openscenario-mcp/examples/: complex_sample.rs  mcp_client_example.py
openscenario-mcp/src/: handlers.rs  lib.rs  main.rs  server.rs  tools.rs
openscenario-mcp/tests/: complex_scenario_tests.rs  error_edge_case_tests.rs  mcp_action_tools_tests.rs  mcp_handlers_tests.rs  mcp_integration_test.rs  mcp_validation_tests.rs
openscenario/esmini-tests/scenarios/: speed_condition_all_test.xosc  speed_condition_any_test.xosc
openscenario/examples/: adaptive_cruise_control.rs  emergency_braking.rs  hello_world.rs  highway_merge.rs  lane_change.rs  lane_change_overtaking.rs  platooning.rs  xml_export.rs
openscenario/src/: catalog.rs  entities.rs  error.rs  lib.rs  opendrive_validator.rs  position.rs  scenario.rs  storyboard.rs  validation.rs  version.rs  xml.rs
openscenario/tests/: acceleration_action_test.rs  action_tests.rs  additional_actions_tests.rs  assign_route_action_test.rs  catalog_tests.rs  catalog_validation_e2e.rs  collision_condition_test.rs  entity_tests.rs  error_tests.rs  follow_trajectory_action_test.rs  integration_test.rs  lane_offset_action_test.rs  longitudinal_distance_action_test.rs  opendrive_tests.rs  parameter_condition_integration_test.rs  position_tests.rs  relative_distance_condition_test.rs  speed_action_enhanced_test.rs  speed_condition_integration_test.rs  speed_profile_action_test.rs  standstill_condition_test.rs  storyboard_tests.rs  synchronize_action_test.rs  test_road.xodr  time_headway_condition_test.rs  trigger_integration_test.rs  trigger_tests.rs  ttc_condition_test.rs  validation_tests.rs  version_tests.rs  xml_multi_action_test.rs  xml_tests.rs
roads/: simple_highway.xodr
(+10 files in other folders)
