[package]
name = "openscenario-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for OpenSCENARIO scenario generation"

[[bin]]
name = "openscenario-mcp"
path = "src/main.rs"

[dependencies]
openscenario = { path = "../openscenario" }
tokio = { version = "1.41", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
