[package]
name = "openscenario-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for OpenSCENARIO scenario generation"

[lib]
name = "openscenario_mcp"
path = "src/lib.rs"

[[bin]]
name = "openscenario-mcp"
path = "src/main.rs"

[dependencies]
openscenario = { path = "../openscenario" }
mcp-sdk = "0.0.3"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
